# RAG-document-neuralsearch

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
ml/: Dockerfile  pyproject.toml  requirements.txt
ml/cortex_ml/: config.py  server.py
ml/cortex_ml/embeddings/: __init__.py  base.py  registry.py  sentence_transformers_provider.py
ml/cortex_ml/llm/: __init__.py  base.py  claude.py  ollama.py  openai_gpt.py  registry.py
ml/cortex_ml/reranker/: __init__.py  base.py  cross_encoder_reranker.py
ml/tests/: test_embeddings.py  test_reranker.py
proto/: ml_service.proto
rust/: Cargo.toml  Dockerfile
rust/crates/cortex-api/: Cargo.toml
rust/crates/cortex-api/src/: error.rs  main.rs  state.rs
rust/crates/cortex-api/src/middleware/: mod.rs
rust/crates/cortex-api/src/routes/: chat.rs  health.rs  ingest.rs  mod.rs  search.rs
rust/crates/cortex-chunker/: Cargo.toml
rust/crates/cortex-chunker/src/: lib.rs  recursive.rs  strategies.rs
rust/crates/cortex-common/: Cargo.toml
rust/crates/cortex-common/src/: config.rs  lib.rs  telemetry.rs  types.rs
rust/crates/cortex-connectors/: Cargo.toml
rust/crates/cortex-connectors/src/: lib.rs  pdf_upload.rs  traits.rs
rust/crates/cortex-ingestion/: Cargo.toml
rust/crates/cortex-ingestion/src/: lib.rs  pipeline.rs
rust/crates/cortex-ingestion/src/parser/: mod.rs  plaintext.rs
rust/crates/cortex-ml-client/: Cargo.toml  build.rs
rust/crates/cortex-ml-client/src/: lib.rs
rust/crates/cortex-scheduler/: Cargo.toml
rust/crates/cortex-scheduler/src/: jobs.rs  lib.rs  worker.rs
rust/crates/cortex-store/: Cargo.toml
rust/crates/cortex-store/src/: lib.rs  models.rs  postgres.rs  weaviate.rs
rust/crates/cortex-store/src/migrations/: 001_init.sql  002_connectors.sql  003_jobs.sql
