[workspace]
resolver = "2"
members = [
    "crates/cortex-api",
    "crates/cortex-ingestion",
    "crates/cortex-connectors",
    "crates/cortex-chunker",
    "crates/cortex-scheduler",
    "crates/cortex-store",
    "crates/cortex-ml-client",
    "crates/cortex-common",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tonic = "0.12"
prost = "0.13"
reqwest = { version = "0.12", features = ["json", "multipart"] }
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
async-trait = "0.1"
tower = { version = "0.5", features = ["util", "limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
config = "0.14"
bytes = "1"
futures = "0.3"
