[package]
name = "cortex-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cortex-api"
path = "src/main.rs"

[dependencies]
cortex-common = { path = "../cortex-common" }
cortex-store = { path = "../cortex-store" }
cortex-ingestion = { path = "../cortex-ingestion" }
cortex-scheduler = { path = "../cortex-scheduler" }
cortex-ml-client = { path = "../cortex-ml-client" }
cortex-connectors = { path = "../cortex-connectors" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
sqlx = { workspace = true }
