[package]
name = "cortex-connectors"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-common = { path = "../cortex-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
