[package]
name = "cortex-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-common = { path = "../cortex-common" }
cortex-store = { path = "../cortex-store" }
cortex-chunker = { path = "../cortex-chunker" }
cortex-connectors = { path = "../cortex-connectors" }
cortex-ml-client = { path = "../cortex-ml-client" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
