[package]
name = "cortex-ml-client"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-common = { path = "../cortex-common" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
